examples/type_system/failing/142_match_bool_missing_true.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E015: Bool match missing true branch.
fn main() -> Unit {
    let b = false
    let _x = match b {
        false -> 0
    }
}
